fix: only toggle password input visible when apropriate

--- a/src/pages/css/SignIn.module.css
+++ b/src/pages/css/SignIn.module.css
@@ -156,6 +156,7 @@
 }
 .loginOption:hover {
     border: 2px solid #4c6c8c;
+    background-color: #2e4256;
 }
 
 
